2005-11-15  Pavel Roskin  <proski@gnu.org>

	* samba/lib/netmask.c: Include <stdlib.h> for exit() and
	<string.h> for memcpy().

2005-11-11  Pavel Roskin  <proski@gnu.org>

	* samba/lib/netmask.c: Add get_netmask() prototype for the dummy
	version.

2005-11-10  Pavel Roskin  <proski@gnu.org>

	* samba/lib/util_sock.c: Fix warnings on 64-bit systems.

	* mcserv.c (get_client): Fix gcc 4 warning.

	* smbfs.c: Remove redundant ipzero declaration.

2005-10-19  Leonard den Ottolander  <leonard den ottolander nl>

	* fish.c (fish_dir_load, fish_linear_start): Get numerical gid/uids
	from ls to avoid wrong parsing of user/group names containing white
	space.

2005-10-09  Boris Belitsky  <?>

	* ftpfs.c (ftpfs_command): Fix "Nowhere to fallback to" warning
	caused by fallback to acitve mode after inactivity.

2005-09-26  Roland Illig  <roland.illig@gmx.de>

	* extfs/iso9660.in: Ignore error messages from locale(1), as it
	does not exist on OpenBSD. Reported by q# on mc-devel.

2005-09-26  Roland Illig  <roland.illig@gmx.de>

	* utilvfs.h (vfs_parse_filetype, vfs_parse_fileperms,
	vfs_parse_filemode): Rewrote the functions to parse Unix file
	modes.
	* utilvfs.c: Likewise.
	* fish.c: Using the new parsing functions.

2005-09-15  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* samba/lib/util.c (tab_depth): Remove.
	* samba/include/byteorder.h: Remove all macroces with tab_depth().
	* vfs/samba/lib/util_sock.c: Comment out read_smb_length(),
	send_null_session_msg(), send_one_packet(), send_smd()
	and read_smb_length().
	* vfs/samba/libsmb/nmblib.c: Comment out copy_nmb_packet(),
	copy_dgram_packet(), copy_packet() and nmb_name_equal().

2005-09-07  Roland Illig  <roland.illig@gmx.de>

	* samba/*: Added many const qualifiers to properly fix the
	warnings emitted by gcc with -Wwrite-strings.
	* smbfs.c: Likewise.

2005-09-05  Roland Illig  <roland.illig@gmx.de>

	* direntry.c: Added const qualifiers to work around gcc
	warnings.
	* extfs.c: Likewise.
	* fish.c: Likewise.